Font and Color changes

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.6/css/all.css">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300;0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="static/css/animate.css">
     <link rel="stylesheet" href="static/css/media-queries.css">
     <title>Raghuveer Adari</title>
@@ -329,7 +330,7 @@
             </div>
             <div id="Skills">
                 <h1 id="skills" class="section display-3">Skills</h1>
-                <div class="skills container-fluid ">
+                <div class="skills container">
                     <ul class="row list-group list-group-horizontal d-flex wow zoomIn">
                         <li class="col-12 col-sm-6 col-md-4 col-lg-2 list-group-item"><img width=144 height=144 src="static/images/java.png" alt="Java" /></li>
                         <li class="col-12 col-sm-6 col-md-4 col-lg-2 list-group-item"><img width=144 height=144 src="static/images/js.png" alt="JavaScript" /></li>
@@ -400,7 +401,7 @@
             <div id="Education">
                 <h1 id="education" class="section display-3 ">Education</h1>
                 <div class="container">
-                    <div class="card wow slideInUp ">
+                    <div class="card wow slideInUp">
                         <div class="row ">
                             <div class="col-md-2 offset-md-1">
                                 <a href="https://www.osmania.ac.in/ " target="_blank ">
@@ -417,7 +418,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card wow slideInUp">
+                    <div class="card wow slideInUp inter">
                         <div class="row">
                             <div class="col-md-2 offset-md-1">
                                 <a href="https://www.narayanagroup.com/ " target="_blank ">
