--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                     <div class="card wow slideInUp">
                         <div class="row ">
                             <div class="col-md-2 offset-md-1">
-                                <a href="https://www.osmania.ac.in/ " target="_blank ">
+                                <a href="http://www.uceou.edu/" target="_blank ">
                                     <img class="edulogo " src="static/images/osmania.png " alt="Osmania logo ">
                                 </a>
                             </div>
@@ -529,6 +529,54 @@
     <script src="static/js/wow.min.js "></script>
     <script src="static/js/scripts.js "></script>
     <script src="https://kit.fontawesome.com/135e4b7186.js" crossorigin="anonymous"></script>
+    <script type="application/ld+json">
+        {
+            "@context": "http://schema.org/",
+            "@type": "Person",
+            "name": "Raghuveer Adari",
+            "jobTitle": "Principal Applications Engineer",
+            "address": {
+                "@type": "PostalAddress",
+                "addressLocality": "Hyderabad",
+                "addressRegion": "Telangana",
+                "postalCode": "500019",
+                "addressCountry": "India"
+            },
+            "affiliation": "Oracle",
+            "alumniOf": "University College of Engineering, Osmania University",
+            "email": "adari.raghuveer@gmail.com",
+            "familyName": "Adari",
+            "givenName": "Raghuveer",
+            "gender": "male",
+            "nationality": "Indian",
+            "worksFor": {
+                "@context": "http://schema.org/",
+                "@type": "Organization",
+                "name": "Oracle",
+                "address": {
+                    "@type": "PostalAddress",
+                    "streetAddress": "Campus Phase III",
+                    "addressLocality": "Hyderabad",
+                    "addressRegion": "Telanagna",
+                    "postalCode": "500081"
+                },
+                "telephone": "+91 40 6605 0000"
+            },
+            "alumniOf": {
+                "@context": "http://schema.org",
+                "@type": "EducationalOrganization",
+                "address": {
+                    "@type": "PostalAddress",
+                    "addressLocality": "Hyderabad",
+                    "addressRegion": "Telangana",
+                    "postalCode": "94301",
+                    "streetAddress": "near Shivam Road"
+                },
+                "name": "University College of Engineering, Osmania University"
+            }
+
+        }
+    </script>
 </body>
 
 </html>
