--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                         <div class="row ">
                             <div class="col-md-2 offset-md-1">
                                 <a href="http://www.uceou.edu/" target="_blank ">
-                                    <img class="edulogo " src="static/images/osmania.png " alt="Osmania logo ">
+                                    <img class="edulogo " src="static/images/uceou.png " alt="Osmania logo ">
                                 </a>
                             </div>
                             <div class="col-md-8 offset-md-1">
